tests/testcases/errors/BCE0153-2.boo
import System.Xml.Serialization

def foo() [SoapElementAttribute("fooReturn")] as string:
	pass
